fix: added higher z-index to invite modal

--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -133,7 +133,7 @@
     .invite-modal {
       display: none; /* Hidden by default */
       position: fixed; /* Stay in place */
-      z-index: 3; /* Sit on top */
+      z-index: 300; /* Sit on top */
       left: 0;
       top: 0;
       width: 100%; /* Full width */
